# poker-engine

./: .gitignore  CMakeLists.txt
archive/: generate_table.cpp  stdafx.h  test.cpp
src/: Deck.cpp  EvaluateHandsTest.cpp  Evaluator.cpp  Evaluator.h  Game.cpp  Game.h  HandEvaluator.cpp  HandEvaluator.h  HandStrength.cpp  HandStrength.h  MCCFR.cpp  MCCFR.h  MCCFRNode.h  Player.cpp  Player.h  PokerEvaluator.cpp  PokerEvalulator.h  PokerHandEvaluator.cpp  PokerHandEvaluator.h  Strategy.cpp  Strategy.h  TestBetting.cpp  TestRound.cpp  arrays.h  badMCCFR.cpp  basic.cpp  card.cpp  card.h  deck.h  evaluator_test.cpp  hand.cpp  hand.h  main.cpp  mtrand.h  poker.h  pokerlib.cpp
src/Base/: Deck.hpp  Hand.hpp  Player.hpp  Rank.hpp  Suit.hpp
src/Game/: Action.hpp  BettingState.hpp  Game.cpp  Game.hpp  HandHistory.hpp
src/Util/: Evaluator.cpp  Evaluator.hpp
src/archive/: GameState.cpp  GameState.h  HandEvaluator.cpp  HandEvaluator.h  HandStrength.cpp  HandStrength.h  Node.cpp  Node.h  PokerCFR.cpp  PokerCFR.h  hand.cpp  hand.h
